--- a/feed/index.html
+++ b/feed/index.html
@@ -12,7 +12,7 @@
 	<atom:link href="https://ayachibadr.github.io/kiki/feed/" rel="self" type="application/rss+xml" />
 	<link>http://ayachibadr.github.io/kiki/</link>
 	<description>Un site utilisant WordPress</description>
-	<lastBuildDate>Sun, 21 Mar 2021 15:27:51 +0000</lastBuildDate>
+	<lastBuildDate>Sun, 21 Mar 2021 15:33:18 +0000</lastBuildDate>
 	<language>fr-FR</language>
 	<sy:updatePeriod>
 	hourly	</sy:updatePeriod>
@@ -20,6 +20,28 @@
 	1	</sy:updateFrequency>
 	<generator>https://wordpress.org/?v=5.7</generator>
 	<item>
+		<title>video 1</title>
+		<link>https://ayachibadr.github.io/kiki/2021/03/21/video-1/</link>
+					<comments>https://ayachibadr.github.io/kiki/2021/03/21/video-1/#respond</comments>
+		
+		<dc:creator><![CDATA[pedro007]]></dc:creator>
+		<pubDate>Sun, 21 Mar 2021 15:33:18 +0000</pubDate>
+				<category><![CDATA[Non classé]]></category>
+		<guid isPermaLink="false">https://ayachibadr.github.io/kiki/?p=9</guid>
+
+					<description><![CDATA[]]></description>
+										<content:encoded><![CDATA[
+<figure class="wp-block-embed is-type-video is-provider-youtube wp-block-embed-youtube wp-embed-aspect-16-9 wp-has-aspect-ratio"><div class="wp-block-embed__wrapper">
+<iframe loading="lazy" title="Anthony Gonzalez, Ana Ofelia Murguía - Remember Me (Reunion) (From &quot;Coco&quot;/Sing-Along)" width="525" height="295" src="https://www.youtube.com/embed/A0azOIk0Kvg?feature=oembed" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div></figure>
+]]></content:encoded>
+					
+					<wfw:commentRss>https://ayachibadr.github.io/kiki/2021/03/21/video-1/feed/</wfw:commentRss>
+			<slash:comments>0</slash:comments>
+		
+		
+			</item>
+		<item>
 		<title>farah</title>
 		<link>https://ayachibadr.github.io/kiki/2021/03/21/farah/</link>
 					<comments>https://ayachibadr.github.io/kiki/2021/03/21/farah/#respond</comments>
